...
                    key: _model.formKey,
                    autovalidateMode: AutovalidateMode.disabled,
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        TextFormField(
                          key: ValueKey('SignUpemail_kaqw'),
                          controller: _model.signUpemailTextController,
                          focusNode: _model.signUpemailFocusNode,
                          onChanged: (_) => EasyDebounce.debounce(
                            '_model.signUpemailTextController',
                            Duration(milliseconds: 2000),
                            () => safeSetState(() {}),
                          ),
                          autofocus: false,
                          textInputAction: TextInputAction.next,
                          obscureText: false,
                          decoration: InputDecoration(
                            hintText: 'you@example.com',
                            hintStyle:
                                FlutterFlowTheme.of(context).bodyLarge.override(
                                      font: GoogleFonts.inter(
                                        fontWeight: FlutterFlowTheme.of(context)
                                            .bodyLarge
                                            .fontWeight,
...
                          keyboardType: TextInputType.emailAddress,
                          cursorColor: Color(0xFFD81B60),
                          validator: _model.signUpemailTextControllerValidator
                              .asValidator(context),
                        ),
                        TextFormField(
                          key: ValueKey('SignUpConfirmemail_uqdt'),
                          controller: _model.signUpConfirmemailTextController,
                          focusNode: _model.signUpConfirmemailFocusNode,
                          onChanged: (_) => EasyDebounce.debounce(
                            '_model.signUpConfirmemailTextController',
                            Duration(milliseconds: 2000),
                            () => safeSetState(() {}),
...
                          cursorColor: Color(0xFFD81B60),
                          validator: _model
                              .signUpConfirmemailTextControllerValidator
                              .asValidator(context),
                        ),
                        TextFormField(
                          key: ValueKey('SignUpPassword_h7ic'),
                          controller: _model.signUpPasswordTextController,
                          focusNode: _model.signUpPasswordFocusNode,
                          onChanged: (_) => EasyDebounce.debounce(
                            '_model.signUpPasswordTextController',
                            Duration(milliseconds: 2000),
                            () => safeSetState(() {}),
                          ),
                          textInputAction: TextInputAction.next,
                          obscureText: !_model.signUpPasswordVisibility,
                          decoration: InputDecoration(
                            hintText: '••••••••',
                            hintStyle:
                                FlutterFlowTheme.of(context).bodyLarge.override(
                                      font: GoogleFonts.inter(
                                        fontWeight: FlutterFlowTheme.of(context)
                                            .bodyLarge
                                            .fontWeight,
...
                          enableInteractiveSelection: true,
                          validator: _model
                              .signUpPasswordTextControllerValidator
                              .asValidator(context),
                        ),
                        TextFormField(
                          key: ValueKey('SignUpConfirmPassword_mrlq'),
                          controller:
                              _model.signUpConfirmPasswordTextController,
                          focusNode: _model.signUpConfirmPasswordFocusNode,
                          onChanged: (_) => EasyDebounce.debounce(
                            '_model.signUpConfirmPasswordTextController',
                            Duration(milliseconds: 2000),
...
                              .asValidator(context),
                        ),
                      ].divide(SizedBox(height: 16.0)),
                    ),
                  ),
                  FFButtonWidget(
                    key: ValueKey('Button_e9qg'),
                    onPressed: () async {
                      logFirebaseEvent(
                          'SIGNUPV1_PAGE_CREATE_ACCOUNT_BTN_ON_TAP');
                      logFirebaseEvent('Button_validate_form');
                      if (_model.formKey.currentState == null ||
                          !_model.formKey.currentState!.validate()) {
...
                              ProfileSetup1Widget.routeName, context.mounted);
                        } else {
                          logFirebaseEvent('Button_show_snack_bar');
                          ScaffoldMessenger.of(context).showSnackBar(
                            SnackBar(
                              content: Text(
                                'Errror: Passwords dont match',
                                style: TextStyle(
                                  color:
                                      FlutterFlowTheme.of(context).primaryText,
                                ),
                              ),
                              duration: Duration(milliseconds: 4000),
...
