...
                              ),
                        ),
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              24.0, 24.0, 24.0, 0.0),
                          child: FFButtonWidget(
                            key: ValueKey('Button_puqh'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'PROFILE_SETUP4_FINISH_PROFILE_SETUP_BTN_');
                              logFirebaseEvent('Button_navigate_to');

                              context.pushNamed(HomePageWidget.routeName);
...
